fixed CORS issue

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -28,5 +28,11 @@
     <!--</script>-->
     <p id="demo"></p>
 </div>
+<script type="text/javascript">
+    $.when($.get("http://127.0.0.1:4567/hello"))
+     .then(function(data, textStatus, jqXHR) {
+         console.log(data);
+     });
+</script>
 </body>
 </html>
