--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -27,6 +27,15 @@
 
     <!--</script>-->
     <p id="demo"></p>
+
+
+    <?php
+        $entityBody = file_get_contents("http://localhost:4567/hello");
+        $parsed_json = json_decode($entityBody);
+        echo "${parsed_json}";
+    ?>
+
+
 </div>
 <script type="text/javascript">
     $.when($.get("http://127.0.0.1:4567/hello"))
