--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -165,19 +165,19 @@
 
                     </p> -->
                     <div class = "col-lg-2 col-sm-2">
-                        <h1>214</h1>
+                        <h1 id="mealsDonated"></h1>
                         <h3>MEALS DONATED</h3>
                     </div>
                     <div class = "col-lg-2 col-sm-2 col-lg-offset-1">
-                        <h1>214</h1>
+                        <h1 id="mealsServed"></h1>
                         <h3>MEALS SERVED</h3>
                     </div>
                     <div class = "col-lg-2 col-sm-2 col-lg-offset-1">
-                        <h1>10</h1>
+                        <h1 id="localPartners"></h1>
                         <h3>LOCAL PARTNERS</h3>
                     </div>
                     <div class = "col-lg-2 col-sm-2 col-lg-offset-1">
-                        <h1>90</h1>
+                        <h1 id="sinceLaunch"></h1>
                         <h3>DAYS SINCE LAUNCH</h3>
                     </div>
                 </div>
@@ -322,6 +322,9 @@
 
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
+
+    <!-- Donation Statistics Loading Script -->
+    <script src="js/donate.js"></script>
 
 </body>
 
