--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -188,7 +188,7 @@
             </div>
             <div class = "row" id = "donate_button">
                 <div class = "col-lg-offset-10">
-                    <a href="donate.html">DONATE</a>
+                    <a href="#">DONATE</a>
                 </div>
             </div>
 
