live loading statistics

--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -184,7 +184,7 @@
 
             </div>
             <div class = "row" id = "graph">
-                GRAPH
+                <!-- GRAPH -->
             </div>
             <div class = "row" id = "donate_button">
                 <div class = "col-lg-offset-10">
