added login etc

--- a/PIF_FrontEnd/donate.html
+++ b/PIF_FrontEnd/donate.html
@@ -60,6 +60,10 @@
                 <li class = "donate">
                     <a href="donate.html">donate</a>
                 </li>
+                <li class="footer-menu-divider">&sdot;</li>
+                <li>
+                    <a href="business.html">for businesses</a>
+                </li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -170,6 +174,10 @@
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
                         <a href="donate.html">donate</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="login.html">for businesses</a>
                     </li>
                 </ul>
                 <p class="copyright text-muted small">Copyright &copy; Family & Children's Service of Ithaca 2015. All Rights Reserved</p>
