--- a/PIF_FrontEnd/partners.html
+++ b/PIF_FrontEnd/partners.html
@@ -115,7 +115,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-6">
+                <div class="col-lg-8 col-sm-6">
                     <img class="img-responsive" src="img/ctb.jpg" alt="" width = "600px" height = "700px">
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -146,7 +146,7 @@
                     <p class="lead">
                     </p>
                 </div>
-                <div class="col-lg-7 col-sm-6">
+                <div class="col-lg-8 col-sm-6" style = "padding-left: 200px; float:right">
                     <img class="img-responsive" src="img/piza2.jpg" alt="" width = "600px" height = "700px">
                 </div>
 
@@ -163,7 +163,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-6">
+                <div class="col-lg-8 col-sm-6">
                     <img class="img-responsive" src="img/tacos.jpg" alt="" width = "600px" height = "700px">
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -194,7 +194,7 @@
                     <p class="lead">
                     </p>
                 </div>
-                <div class="col-lg-7 col-sm-6">
+                <div class="col-lg-7 col-sm-6" style = "padding-left: 100px; float:right">
                     <img class="img-responsive" src="img/sub.jpg" alt="" width = "600px" height = "700px">
                 </div>
 
@@ -211,7 +211,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-6">
+                <div class="col-lg-8 col-sm-6">
                     <img class="img-responsive" src="img/ithaca_coffee.png" alt="" width = "600px" height = "700px">
                 </div>
                 <div class="col-lg-4 col-sm-6">
@@ -242,7 +242,7 @@
                     <p class="lead">
                     </p>
                 </div>
-                <div class="col-lg-7 col-sm-6">
+                <div class="col-lg-7 col-sm-6" style = "padding-left: 100px; float:right">
                     <img class="img-responsive" src="img/pizza.jpg" alt="" width = "600px" height = "700px">
                 </div>
 
@@ -255,7 +255,7 @@
     <!-- /.content-section-a -->
 
     <div class = row>
-
+        <!--Google Maps-->
 
     </div>
 
@@ -279,6 +279,10 @@
                         <li class="footer-menu-divider">&sdot;</li>
                         <li>
                             <a href="donate.html">donate</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="login.html">for businesses</a>
                         </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Family & Children's Service of Ithaca 2015. All Rights Reserved</p>
