--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -310,6 +310,10 @@
                         <li>
                             <a href="donate.html">donate</a>
                         </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="login.html">for businesses</a>
+                        </li>
                     </ul>
                     <p class="copyright text-muted small">Copyright &copy; Family & Children's Service of Ithaca 2015. All Rights Reserved</p>
                 </div>
