front end changes

--- a/PIF_FrontEnd/confirm.html
+++ b/PIF_FrontEnd/confirm.html
@@ -47,7 +47,7 @@
     </div>
     <div id = "buttons" class = "col-lg-12">
         <div class = "col-lg-5 col-lg-offset-2">
-            <a href="confirm.html">CANCEL</a>
+            <a href="business.html">CANCEL</a>
         </div>
         <div class = "col-lg-5">
             <a href="confirm.html">ACCEPT</a>
