--- a/PIF_FrontEnd/partners.html
+++ b/PIF_FrontEnd/partners.html
@@ -115,7 +115,6 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-6">
                 <div class="col-lg-8 col-sm-6">
                     <img class="img-responsive" src="img/ctb.jpg" alt="" width = "600px" height = "700px">
                 </div>
@@ -147,7 +146,6 @@
                     <p class="lead">
                     </p>
                 </div>
-                <div class="col-lg-7 col-sm-6">
                 <div class="col-lg-8 col-sm-6" style = "padding-left: 200px; float:right">
                     <img class="img-responsive" src="img/piza2.jpg" alt="" width = "600px" height = "700px">
                 </div>
@@ -165,7 +163,6 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-6">
                 <div class="col-lg-8 col-sm-6">
                     <img class="img-responsive" src="img/tacos.jpg" alt="" width = "600px" height = "700px">
                 </div>
@@ -188,19 +185,24 @@
     <!--Gorger's Subs-->
     <div class="content-section-a">
 
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-sm-6">
-                    <div class="clearfix"></div>
-                    <h2 class = "company">Gorger's Subs</h2>
-                    <h2 id = "number_avail">6</h2> <h3 id = "item_avail">subs available</h3>.
-                    <p class="lead">
-                    <img class="img-responsive" src="img/sub.jpg" alt="" width = "600px" height = "700px">
-                </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-4 col-sm-6">
+                <div class="clearfix"></div>
+                <h2 class = "company">Gorger's Subs</h2>
+                <h2 id = "number_avail">6</h2> <h3 id = "item_avail">subs available</h3>.
+            </div>
+            <div class="col-lg-7 col-sm-6" style = "padding-left: 100px; float:right">
+                <img class="img-responsive" src="img/sub.jpg" alt="" width = "600px" height = "700px">
+            </div>
 
-            </div>
+        </div>
 
-        </div>
+    </div>
+    <!-- /.container -->
+
+</div>
+
         <!-- /.container -->
 
     </div>
@@ -211,7 +213,6 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-6">
                 <div class="col-lg-8 col-sm-6">
                     <img class="img-responsive" src="img/ithaca_coffee.png" alt="" width = "600px" height = "700px">
                 </div>
@@ -243,7 +244,6 @@
                     <p class="lead">
                     </p>
                 </div>
-                <div class="col-lg-7 col-sm-6">
                 <div class="col-lg-7 col-sm-6" style = "padding-left: 100px; float:right">
                     <img class="img-responsive" src="img/pizza.jpg" alt="" width = "600px" height = "700px">
                 </div>
