add 2 confirm page

--- a/PIF_FrontEnd/business.html
+++ b/PIF_FrontEnd/business.html
@@ -46,12 +46,12 @@
     <div class = "container" id = "give_receive">
         <div class = "col-lg-4 col-lg-offset-2">
             <div id = "give_button" class = "col-lg-offset-0">
-                <a href="confirm.html"> GIVE </a>
+                <a href="confirm_gve.html"> GIVE </a>
             </div>
         </div>
         <div class = "col-lg-4 col-lg-offset-1">
             <div id = "receive_button" class = "col-lg-offset-0">
-                <a href="confirm.html">RECEIVE</a>
+                <a href="confirm_receive.html">RECEIVE</a>
             </div>
         </div>
     </div>
