--- a/PIF_FrontEnd/confirm_give.html
+++ b/PIF_FrontEnd/confirm_give.html
@@ -30,7 +30,7 @@
 
 </head>
 <body>
-    <div class = "col-lg-4 col-lg-offset-4" id = "confirm">
+    <div class = "col-lg-6 col-lg-offset-2" id = "confirm">
         <h1>Food For Change</h1>
         <hr>
         <h2>Unt autatur, cum quidelis exerferro et ipsunt el
@@ -47,10 +47,10 @@
     </div>
     <div id = "buttons" class = "col-lg-12">
         <div class = "col-lg-5 col-lg-offset-2">
-            <a href="confirm.html">CANCEL</a>
+            <a href="confirm_give.html">CANCEL</a>
         </div>
         <div class = "col-lg-5">
-            <a href="confirm.html">ACCEPT</a>
+            <a href="confirm_give.html">ACCEPT</a>
         </div>
     </div>
 
