fixed login and give/receive stuff for now

--- a/PIF_FrontEnd/confirm_give.html
+++ b/PIF_FrontEnd/confirm_give.html
@@ -17,7 +17,8 @@
 
     <!-- Custom CSS -->
     <link href="css/business.css" rel="stylesheet">
-
+    <script src="js/jquery.js"></script>
+    <script src="js/give.js"></script>
 
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -50,7 +51,7 @@
             <a href="business.html">CANCEL</a>
         </div>
         <div class = "col-lg-5">
-            <a href="confirm_give.html">ACCEPT</a>
+            <a href="business.html" class="giveAccept">ACCEPT</a>
         </div>
     </div>
 
