--- a/PIF_FrontEnd/confirm_receive.html
+++ b/PIF_FrontEnd/confirm_receive.html
@@ -17,8 +17,8 @@
 
     <!-- Custom CSS -->
     <link href="css/business.css" rel="stylesheet">
-
-
+    <script src="js/jquery.js"></script>
+    <script src="js/receive.js"></script>
     <!-- Custom Fonts -->
     <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -47,10 +47,10 @@
 </div>
 <div id = "buttons" class = "col-lg-12">
     <div class = "col-lg-5 col-lg-offset-2">
-        <a href="confirm_give.html">CANCEL</a>
+        <a href="business.html">CANCEL</a>
     </div>
     <div class = "col-lg-5">
-        <a href="confirm_give.html">ACCEPT</a>
+        <a href="business.html" class="receiveAccept">ACCEPT</a>
     </div>
 </div>
 
