--- a/PIF_FrontEnd/login.html
+++ b/PIF_FrontEnd/login.html
@@ -23,7 +23,7 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head> 
+  </head>
 
   <body>
     <div style = "text-align:center">
@@ -49,7 +49,9 @@
             <a href="register.html">Don't have an account?</a>
           </label>
         </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">
+            <a href="business.html" style="color:white;">Sign in</a>
+        </button>
       </form>
 
     </div> <!-- /container -->
