updated register button

--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -261,7 +261,7 @@
                 </div>
                 <div class = "col-lg-4 col-sm-4" id = "donate_button">
                     <div style = "margin-left: 30px; padding-top:120px">
-                        <a href="donate.html">REGISTER</a>
+                        <a href="register.html">REGISTER</a>
                     </div>
                 </div>
             </div>
