fixed index and give/receive css

--- a/PIF_FrontEnd/confirm_receive.html
+++ b/PIF_FrontEnd/confirm_receive.html
@@ -30,19 +30,17 @@
 
 </head>
 <body>
-<div class = "col-lg-6 col-lg-offset-2" id = "confirm">
+<div class = "col-lg-8 col-lg-offset-2" id = "confirm">
     <h1>Food For Change</h1>
     <hr>
-    <h2>Unt autatur, cum quidelis exerferro et ipsunt el
-        estrum volorep ereperrum autessimpore si alibus,
-        volorpo reperum quia et fugit occus, velique
-        porepelis dem animolu ptatur magnia iunt harum
-        fuga. Ditatur?
+    <h2>
+        If you are viewing this page, that means you are about to
+        receive a gift from one of our amazing donors!  We ask that
+        you be consciencious in taking advantage of these donations,
+        and hope you enjoy each and every bite or sip.
         <br><br>
-        Equam aut quid eum fugit, cus magnis eossita
-        imaio. Nam quam voluptatet exceris earibus
-        molum, con porrovit mo eatatur, tem nust ab int
-        eossi temoluptur, occae experum reriam fac
+        Feel free to visit the <a href="stories.html">stories page</a>
+        to leave a note, any and all comments are appreciated!
     </h2>
 </div>
 <div id = "buttons" class = "col-lg-12">
