--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -104,7 +104,7 @@
 
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-sm-7">
+                <div class="col-lg-9 col-sm-7 col-lg-offset-2">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">ABOUT</h2>
                     <p class="lead">Welcome to Food for Change! This organization is
@@ -113,9 +113,6 @@
                         teamed up with Food for Change so that anyone in need
                         can step in and grab a meal. We can’t do this without you!
                     </p>
-                </div>
-                <div class="col-lg-3 col-lg-offset-2 col-sm-5">
-                    <img class="img-responsive" src="img/blank.png" alt="">
                 </div>
             </div>
 
