--- a/PIF_FrontEnd/business.html
+++ b/PIF_FrontEnd/business.html
@@ -34,12 +34,12 @@
     <div class = "container" id = "give_receive">
         <div class = "col-lg-4 col-lg-offset-2">
             <div id = "give_button" class = "col-lg-offset-0">
-                <img src = "img/give-01.jpg" height = "280px" width = "280px">
+                <img src = "img/give-01.jpg" height = "200px" width = "200px">
             </div>
         </div>
         <div class = "col-lg-4 col-lg-offset-1">
             <div id = "receive_button" class = "col-lg-offset-0">
-                <img src = "img/recieve-01.jpg" height = "280px" width = "280px">
+                <img src = "img/recieve-01.jpg" height = "200px" width = "200px">
             </div>
         </div>
     </div>
@@ -73,5 +73,33 @@
 
     </div>
 
+    <!-- Footer -->
+    <hr>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <ul class="list-inline">
+                        <li>
+                            <a href="index.html">home</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="partners.html">partners</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="stories.html">stories</a>
+                        </li>
+                        <li class="footer-menu-divider">&sdot;</li>
+                        <li>
+                            <a href="index.html">logout</a>
+                        </li>
+                    </ul>
+                    <p class="copyright text-muted small">Copyright &copy; Family & Children's Service of Ithaca 2015. All Rights Reserved</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
