--- a/PIF_FrontEnd/stories.html
+++ b/PIF_FrontEnd/stories.html
@@ -69,18 +69,36 @@
     <!-- Each image is 800px by 800px -->
     <div class="photobanner">
 
-        <img class="first" src="img/stories-1.jpg" alt="" height="800 "width="800">
-        <img src="img/stories-2.jpg" alt="" height="800" width="800">
-        <img src="img/stories-3.jpg" alt="" height="800" width="800">
-        <img src="img/stories-4.jpg" alt="" height="800" width="800">
-        <img src="img/stories-5.jpg" alt="" height="800" width="800">
-        <img src="img/stories-1.jpg" alt="" height="800" width="800">
-        <img src="img/stories-2.jpg" alt="" height="800" width="800">
-        <img src="img/stories-3.jpg" alt="" height="800" width="800">
-        <img src="img/stories-4.jpg" alt="" height="800" width="800">
+        <img class="first" src="img/stories-1.jpg" alt="" height="400 "width="400">
+        <img src="img/stories-2.jpg" alt="" height="400" width="400">
+        <img src="img/stories-3.jpg" alt="" height="400" width="400">
+        <img src="img/stories-4.jpg" alt="" height="400" width="400">
+        <img src="img/stories-5.jpg" alt="" height="400" width="400">
+        <img src="img/stories-1.jpg" alt="" height="400" width="400">
+        <img src="img/stories-2.jpg" alt="" height="400" width="400">
+        <img src="img/stories-3.jpg" alt="" height="400" width="400">
+        <img src="img/stories-4.jpg" alt="" height="400" width="400">
+    </div>
+    <div id="messages_div">
+       <div class="story" >
+        <p>
+           <blockquote class="story"><span class="bqstart">“</span>
+           <br>
+           <br>
+           <br>
+           I used to spend hours sitting outside shops feeling ashamed for having to beg for money to eat. Now, I can
+           walk into a shop and get a meal while I spend my time finding ways to provide for myself. I'm so grateful for
+           this organization and one day I want to be the one donating. We're all human and we should care for one another.
+           <br>
+           <br>
+           <span class="col-lg-20">- Bill</span>
+           <span class="bqend">”</span></blockquote>  </p>
+
+       </div>
+
     </div>
 
-    <form action="" method="post" class="white-pink" action="http://localhost:4567/stories/submit">
+    <div class="white-pink">
         <h1> ADD YOUR OWN STORY
         </h1>
         <svg height="50" width="500">
@@ -97,9 +115,86 @@
         </label>
         <label>
             <span>&nbsp;</span>
-            <input type="button" class="button" value="SUBMIT" />
+            <input type="button" class="button" class="col-lg-offset-12" value="SUBMIT" onclick="sendForm()"/>
         </label>
-    </form>
+        <script>
+            function sendForm(){
+                eltname = document.getElementById("name").value;
+                document.getElementById("name").value = "";
+                eltmessage = document.getElementById("message").value;
+                document.getElementById("message").value = "";
+                $.post("http://localhost:4567/stories/submit",
+                        JSON.stringify({
+                            name: eltname,
+                            message: eltmessage
+                        }), function(response) {
+                            var start = document.createTextNode("“");
+                            var end = document.createTextNode("”");
+                            var r = JSON.parse(response);
+                            var wrapper = document.createElement("div");
+                            wrapper.className = "story";
+                            var newMessage = document.createElement("p");
+                            var blockQuote = document.createElement("blockquote");
+                            blockQuote.className = "story";
+                            var span1 = document.createElement("span");
+                            span1.className = "bqstart";
+                            var p = document.createElement("p");
+                            var span2 = document.createElement("span");
+                            span2.className = "bqend";
+                            var node = document.createTextNode(r.message + "\n- " + r.name);
+                            p.appendChild(node);
+                            span1.appendChild(start);
+                            span2.appendChild(end);
+                            blockQuote.appendChild(span1);
+                            blockQuote.appendChild(p);
+                            blockQuote.appendChild(span2);
+                            newMessage.appendChild(blockQuote);
+                            wrapper.appendChild(newMessage);
+                            var messages_div = document.getElementById("messages_div");
+                            messages_div.appendChild(wrapper);
+
+                        });
+            }
+        </script>
+    </div>
 </div>
+<!-- Footer -->
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <ul class="list-inline">
+                    <li>
+                        <a href="index.html">home</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="partners.html">partners</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="stories.html">stories</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="donate.html">donate</a>
+                    </li>
+                    <li class="footer-menu-divider">&sdot;</li>
+                    <li>
+                        <a href="login.html">for businesses</a>
+                    </li>
+                </ul>
+                <p class="copyright text-muted small">Copyright &copy; Family & Children's Service of Ithaca 2015. All Rights Reserved</p>
+            </div>
+        </div>
+    </div>
+</footer>
+
+<!-- jQuery -->
+<script src="js/jquery.js"></script>
+
+<!-- Bootstrap Core JavaScript -->
+<script src="js/bootstrap.min.js"></script>
+
 </body>
 </html>
