fixed API calls

--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -170,19 +170,19 @@
                         <h3>MEALS SERVED</h3>
                     </div>
                     <div class = "col-lg-2 col-sm-2 col-lg-offset-1">
-                        <h1 id="localPartners"></h1>
+                        <h1 id="localPartners">10</h1>
                         <h3>LOCAL PARTNERS</h3>
                     </div>
                     <div class = "col-lg-2 col-sm-2 col-lg-offset-1">
-                        <h1 id="sinceLaunch"></h1>
-                        <h3>DAYS SINCE LAUNCH</h3>
+                        <h1 id="available"></h1>
+                        <h3>TOTAL AVAILABLE DONATIONS</h3>
                     </div>
                 </div>
 
             </div>
             <div class = "row" id = "graph">
                 <!-- GRAPH -->
-                
+
             </div>
 
         </div>
