fixed draw on scrolling

--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -182,9 +182,9 @@
                 </div>
 
             </div>
-            <div class = "row" id = "graph">
+            <div class = "row" id = "graph" style="text-align:center;">
                 <!-- GRAPH -->
-                <script src="app.js"></script>
+                <script src="js/app.js"></script>
             </div>
 
         </div>
