fixed graph alignment

--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -157,7 +157,7 @@
         <div class="container">
 
             <div class="row" id = "progress">
-                <div class="col-lg-12 col-sm-12">
+                <div class="col-lg-12 col-sm-12" style="text-align:center;">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">OUR PROGRESS</h2>
                     <!--<p class="lead">
