--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -28,6 +28,12 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
     <script src="http://d3js.org/d3.v3.js"></script>
+    <!-- jQuery -->
+    <script src="js/jquery.js"></script>
+    <script src="js/jquery.countTo.js"></script>
+    <!-- Donation Statistics Loading Script -->
+    <script src="js/donate.js"></script>
+    <script src="js/app.js"></script>
 
 </head>
 
@@ -184,7 +190,6 @@
             </div>
             <div class = "row" id = "graph" style="text-align:center;">
                 <!-- GRAPH -->
-                <script src="js/app.js"></script>
             </div>
 
         </div>
@@ -315,15 +320,8 @@
             </div>
         </div>
     </footer>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Donation Statistics Loading Script -->
-    <script src="js/donate.js"></script>
 
 </body>
 
