--- a/PIF_FrontEnd/login.html
+++ b/PIF_FrontEnd/login.html
@@ -27,7 +27,9 @@
 
   <body>
     <div style = "text-align:center">
-      <img src = "/img/logo.jpg" width = "460px" height = "180px">
+        <a href="index.html">
+            <img src="./img/logo.jpg" width="460px" height="180px">
+        </a>
     </div>
 
     <div class = "col-lg-12" id = "info" style = "background-color:#ffffff; text-align:center;">
