--- a/PIF_FrontEnd/register.html
+++ b/PIF_FrontEnd/register.html
@@ -13,10 +13,10 @@
     <title>Signin Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="../css/bootstrap.min.css" rel="stylesheet">
+    <link href="./css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="../css/signin.css" rel="stylesheet">
+    <link href="./css/signin.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -27,8 +27,8 @@
 
 <body>
 <div style="text-align:center">
-    <a href="../index.html">
-        <img src="../img/logo.jpg" width="460px" height="180px">
+    <a href="index.html">
+        <img src="./img/logo.jpg" width="460px" height="180px">
     </a>
 </div>
 
