--- a/PIF_FrontEnd/stories.html
+++ b/PIF_FrontEnd/stories.html
@@ -79,30 +79,83 @@
         <img src="img/stories-3.jpg" alt="" height="400" width="400">
         <img src="img/stories-4.jpg" alt="" height="400" width="400">
     </div>
-    <div id="messages_div">
-       <div class="story" >
-        <p>
-           <blockquote class="story"><span class="bqstart">“</span>
-           <br>
-           <br>
-           <br>
-           I used to spend hours sitting outside shops feeling ashamed for having to beg for money to eat. Now, I can
-           walk into a shop and get a meal while I spend my time finding ways to provide for myself. I'm so grateful for
-           this organization and one day I want to be the one donating. We're all human and we should care for one another.
-           <br>
-           <br>
-           <span class="col-lg-20">- Bill</span>
-           <span class="bqend">”</span></blockquote>  </p>
+    <div class="container">
+        <div class="col-lg-2"></div>
+        <div class="col-lg-10">
+            <div id="messages_div" align="middle">
+                <div>
+                    <p class="story">
+                        <span class="bqstart">“</span>
+                        <br>
+                        <br>
+                        <br>
+                        I used to spend hours sitting outside shops feeling ashamed for having to beg for money to eat. Now, I can
+                        walk into a shop and get a meal while I spend my time finding ways to provide for myself. I'm so grateful for
+                        this organization and one day I want to be the one donating. We're all human and we should care for one another.
+                        <br>
+                        <br>
+                        <span class="col-lg-20">- Bill</span>
+                        <span class="bqend">”</span>  </p>
 
-       </div>
+                </div>
+                <div>
+                    <p class="story">
+                        <span class="bqstart">“</span>
+                        <br>
+                        <br>
+                        <br>
+                        I was at my favorite Taco shop today in the Ithaca Commons. When I got to the checkout I paid
+                        and saw a tablet that asked if I’d like to donate a meal by paying for it now so a homeless
+                        person could it later. I just about teared up on the spot. I pressed a button to donate a taco
+                        and I even got to leave a comment for the person. When I went home and ate, the tacos tasted better
+                        than ever because I knew my donation would feed someone that night. To the person who needed it,
+                        I hope you enjoyed it as much as I did!
+                        <span class="col-lg-20">- Gloria</span>
+                        <span class="bqend">”</span>
+                    </p>
 
+                </div>
+                <div>
+                    <p class="story">
+                        <span class="bqstart">“</span>
+                        <br>
+                        <br>
+                        <br>
+                        I used to spend hours sitting outside shops feeling ashamed for having to beg for money to eat. Now, I can
+                        walk into a shop and get a meal while I spend my time finding ways to provide for myself. I'm so grateful for
+                        this organization and one day I want to be the one donating. We're all human and we should care for one another.
+                        <br>
+                        <br>
+                        <span class="col-lg-20">- Joyce</span>
+                        <span class="bqend">”</span>  </p>
+
+                </div>
+                <div>
+                    <p class="story">
+                        <span class="bqstart">“</span>
+                        <br>
+                        <br>
+                        <br>
+                        I used to spend hours sitting outside shops feeling ashamed for having to beg for money to eat. Now, I can
+                        walk into a shop and get a meal while I spend my time finding ways to provide for myself. I'm so grateful for
+                        this organization and one day I want to be the one donating. We're all human and we should care for one another.
+                        <br>
+                        <br>
+                        <span class="col-lg-20">- Rupert</span>
+                        <span class="bqend">”</span>
+                    </p>
+
+                </div>
+
+            </div>
+        </div>
+        <div class="col-lg-1"></div>
     </div>
-
-    <div class="white-pink">
+    <div class="white-pink" >
         <h1> ADD YOUR OWN STORY
         </h1>
         <svg height="50" width="500">
-            <line x1="0" y1="0" x2="260" y2="0" style="stroke:blue;stroke-width:2" />
+            <line x1="0" y1="0" x2="560" y2="0" style="stroke:rgb(63, 132, 197);stroke-width:8" />
         </svg>
         <label>
             <span style="color:black" >NAME </span>
@@ -114,8 +167,8 @@
             <textarea id="message" name="message" ></textarea>
         </label>
         <label>
-            <span>&nbsp;</span>
-            <input type="button" class="button" class="col-lg-offset-12" value="SUBMIT" onclick="sendForm()"/>
+            <button type="button" class="button" style = "float:right"
+            onclick="sendForm()"> SUBMIT </button>
         </label>
         <script>
             function sendForm(){
@@ -132,23 +185,23 @@
                             var end = document.createTextNode("”");
                             var r = JSON.parse(response);
                             var wrapper = document.createElement("div");
-                            wrapper.className = "story";
                             var newMessage = document.createElement("p");
-                            var blockQuote = document.createElement("blockquote");
-                            blockQuote.className = "story";
+                            newMessage.className = "story";
                             var span1 = document.createElement("span");
-                            span1.className = "bqstart";
-                            var p = document.createElement("p");
                             var span2 = document.createElement("span");
-                            span2.className = "bqend";
-                            var node = document.createTextNode(r.message + "\n- " + r.name);
-                            p.appendChild(node);
+                            var span3 = document.createElement("span");
+                            span1.className = "bqstart";
+                            span2.className = "col-lg-20";
+                            span3.className = "bqend";
                             span1.appendChild(start);
-                            span2.appendChild(end);
-                            blockQuote.appendChild(span1);
-                            blockQuote.appendChild(p);
-                            blockQuote.appendChild(span2);
-                            newMessage.appendChild(blockQuote);
+                            span3.appendChild(end);
+                            var node = document.createTextNode(r.message);
+                            var name = document.createTextNode("-"+r.name);
+                            span2.appendChild(name);
+                            newMessage.appendChild(span1);
+                            newMessage.appendChild(node);
+                            newMessage.appendChild(span2);
+                            newMessage.appendChild(span3);
                             wrapper.appendChild(newMessage);
                             var messages_div = document.getElementById("messages_div");
                             messages_div.appendChild(wrapper);
