Stories with bold

--- a/PIF_FrontEnd/index.html
+++ b/PIF_FrontEnd/index.html
@@ -217,7 +217,7 @@
 
                         <i class="fa fa-quote-right"></i><br>
 
-                        - Bill
+                        <b> - Bill </b>
 
                     </p>
                     <hr>
